--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-plugin-typescript": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
+    "axios": "^0.19.0",
     "typescript": "^3.4.3",
+    "vue-cli-plugin-quasar": "^1.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
