--- a/package.json
+++ b/package.json
@@ -7,16 +7,29 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@quasar/extras": "^1.0.0",
+    "@types/leaflet": "^1.5.0",
     "core-js": "^2.6.5",
+    "date-fns": "^1.30.1",
+    "geolib": "^3.0.4",
+    "leaflet": "^1.5.1",
+    "node-sass": "^4.12.0",
+    "quasar": "^1.0.0",
+    "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
-    "vue-property-decorator": "^8.1.0"
+    "vue-property-decorator": "^8.2.1",
+    "vue2-leaflet": "^2.2.1",
+    "vue2-leaflet-markercluster": "^3.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-plugin-typescript": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
     "axios": "^0.19.0",
+    "babel-plugin-transform-imports": "1.5.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "typescript": "^3.4.3",
     "vue-cli-plugin-quasar": "^1.0.0",
     "vue-template-compiler": "^2.6.10"
